# rain

garbage/: foo.cc  foo.hh  foo.ih  test2  test2.cc  test3  test3.cc
src/: CMakeLists.txt  CMakeLists.txt~  CMakeLists~  config.h.in~  config.hh.in
src/core/: CMakeLists.txt  object.hh  task.cc  task.hh  taskcompletionhandler.hh  taskrunner.cc  taskrunner.hh
src/exceptions/: CMakeLists.txt  errnoexception.cc  errnoexception.hh
src/io/: CMakeLists.txt  copyhandler.hh  filedescriptorstream.cc  filedescriptorstream.hh  inputhandler.hh  io.cc  io.hh  iostatechangedhandler.hh  iostatemonitor.cc  iostatemonitor.hh  outputhandler.hh  sink.hh  sinkoutputsession.cc  sinkoutputsession.hh  source.hh  sourceinputsession.cc  splicecopyhandler.cc  splicecopyhandler.hh  stream.hh
src/test/: CMakeLists.txt  test_encpoly  test_encpoly.cc  test_filedescriptorstream.cc  test_iostatemonitor.cc  test_pimpl  test_pimpl.cc  test_singleton.cc  test_task.cc  test_taskrunner.cc
src/util/: pimpl.hh  singleton.hh  visibility.hh
