add_executable(test_singleton test_singleton.cc)
add_executable(test_task test_task.cc)
add_executable(test_taskrunner test_taskrunner.cc)
add_executable(test_iostatemonitor test_iostatemonitor.cc)
add_executable(test_filedescriptorstream test_filedescriptorstream.cc)

target_link_libraries(test_task core)
target_link_libraries(test_taskrunner core)
target_link_libraries(test_iostatemonitor io exceptions)
target_link_libraries(test_filedescriptorstream io exceptions)
